--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.github.hotchemi:permissionsdispatcher:2.3.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.1'
+
+    compile 'com.github.nkzawa:socket.io-client:0.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
