--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
     compile 'com.github.nkzawa:socket.io-client:0.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.orhanobut:logger:1.15'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     testCompile 'junit:junit:4.12'
 }
