--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.gca.red.redplace"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -59,7 +59,10 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.orhanobut:logger:1.15'
     compile 'com.victor:lib:1.0.4'
-    compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.afollestad.material-dialogs:commons:0.9.3.0'
+    compile 'com.github.kenglxn.QRGen:android:2.2.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.1'
 }
