--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     compile 'com.afollestad.material-dialogs:commons:0.9.3.0'
     compile 'com.github.kenglxn.QRGen:android:2.2.0'
     compile 'me.dm7.barcodescanner:zxing:1.9'
+    compile 'com.sothree.slidinguppanel:library:3.3.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.1'
 }
