--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,10 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.github.hotchemi:permissionsdispatcher:2.3.1'
-    compile 'com.github.nkzawa:socket.io-client:0.3.0'
+    compile ('io.socket:socket.io-client:0.8.3') {
+        // excluding org.json which is provided by Android
+        exclude group: 'org.json', module: 'json'
+    }
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.orhanobut:logger:1.15'
     compile 'com.victor:lib:1.0.4'
